# task-manager

./: .gitignore  CMakeLists.txt  README.md  global.drawio  global.xml  interface.drawio  main.cpp
Entity/: Entity.h  Project.cpp  Project.h  Task.h  User.cpp
dev-daniil/: CMakeLists.txt  IPasswordEncoder.cpp  IPasswordEncoder.h  IValidator.cpp  IValidator.h  PasswordEncoder.cpp  PasswordEncoder.h  Validator.cpp  main.cpp
dev-daniil/Encoder/: CMakeLists.txt  Decryptor.cpp  Decryptor.h  Encryptor.cpp  ICrypto.h  KeyGen.cpp  KeyGen.h
example/: main.cpp
example/include/: BoostEmailCallbacks.h  CurlCallbacks.h  PgCallbacks.h
example/source/: BoostEmailCallbacks.cpp  CurlCallbacks.cpp  PgCallbacks.cpp
include/Encoder/: Decryptor.h  Encryptor.h  ICrypto.h  Key.h  KeyGen.h  PasswordEncoder.h
include/Entity/: User.h
include/Services/: UserService.h  validResponse.h
include/controller/: CommandManager.h  Controller.h  SecurityManager.h
include/encoder/: Encoder.h  Encryptor.h  Key.h  KeyGen.h  PasswordEncoder.h
include/entities/: Entities.h  Entity.h  Project.h  Request.h  Response.h  Task.h  User.h
include/entity/: Entity.h  Project.h  Task.h  User.h
include/gui/: Display.h  EntityContainer.h  Gui.h  Parser.h  Request.h  Response.h  ServiceConnector.h  Services.h  State.h
include/managers/: DbManager.h  HistoryManager.h  NotificationManager.h
include/parser/: ParseHandler.h  Parser.h
include/parsers/: ParseError.h  ParseHandler.h  Parser.h
include/privilege/: Privilege.h
include/services/: UserService.h  validResponse.h
include/stringFunctions/: StringFunctions.h
include/taskManager/: TaskManager.h
include/tracking/: Email.h  Message.h  Notifier.h  Subscriber.h
include/validator/: IValidator.h
includes/: Parser.h
includes/gui/: EntityContainer.h  Gui.h  Parser.h  ServiceConnector.h
includes/taskManager/: TaskManager.h
project/: CMakeLists.txt  main.cpp
project/includes/: Display.h  Entities.h  EntityContainer.h
project/src/: CMakeLists.txt  Display.cpp  Parser.cpp
project/test/: test.cpp
resources/: PostgreDb.sql  dbProperties.txt
source/Encoder/: Decryptor.cpp  Encryptor.cpp  ICrypto.cpp  KeyGen.cpp  PasswordEncoder.cpp
source/Entity/: Entity.cpp  Project.cpp  Task.cpp  User.cpp
source/Services/: UserService.cpp
source/controller/: CommandManager.cpp  Controller.cpp  SecurityManager.cpp
source/encoder/: Decryptor.cpp  Encryptor.cpp  ICrypto.cpp  KeyGen.cpp  PasswordEncoder.cpp
source/entities/: Entities.cpp  Entity.cpp  Project.cpp  Task.cpp  User.cpp
source/entity/: Entity.cpp  Project.cpp  Task.cpp  User.cpp
source/gui/: Display.cpp  Gui.cpp  Parser.cpp  ServiceConnector.cpp  State.cpp
source/managers/: DbManager.cpp  HistoryManager.cpp  NotificationManager.cpp
source/parser/: ParseHandler.cpp  Parser.cpp
source/parsers/: ParseHandler.cpp  Parser.cpp
source/services/: UserService.cpp
source/stringFunctions/: StringFunctions.cpp
source/taskManager/: TaskManager.cpp
source/tracking/: Email.cpp  Message.cpp  Subscriber.cpp
source/validator/: Validator.cpp
src/entities/: Entities.cpp
src/gui/: Display.cpp  Gui.cpp  Parser.cpp  ServiceConnector.cpp
test/: Tests.cpp  mocks.h  test.cpp
test/controller/: ControllerTest.cpp
test/encoder/: encoderTest.cpp
test/gui/: DisplayTest.cpp  GuiTest.cpp  ParserTest.cpp  ServiceConnectorTest.cpp
test/managers/: DbManagerTest.cpp  HistoryManagerTest.cpp  NotificationManagerTest.cpp
test/services/: userSericeTest.cpp
tests/: CMakeLists.txt  Tests.cpp  main.cpp
uml/: validator+groups.drawio
(+67 files in other folders)
